# AI-travel-plan

./: DESIGN.md  PRODUCT.md  README.md  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ActionDock.tsx  AllSchedulePage.tsx  AssistantPanel.tsx  DestinationMapPicker.tsx  MyTripsPage.tsx  NewTripPanel.tsx  Onboarding.tsx  RemindersPage.tsx  SettingsPanel.tsx  SpotlightSurface.tsx  Timeline.tsx  TravelMap.tsx  WeatherPill.tsx  Workspace.tsx
src/data/: sampleTrip.ts
src/lib/: backend.ts
src/types/: trip.ts
