[package]
name = "travel-canvas"
version = "0.1.0"
description = "A local-first AI travel planning workspace for macOS"
authors = ["pjl"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "travel_canvas_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
tokio = { version = "1", features = ["time", "macros", "rt"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
